Added probability plots

--- a/BayesClassifierECG.ipynb
+++ b/BayesClassifierECG.ipynb
@@ -6,7 +6,9 @@
       "name": "BayesClassifierECG-v1.ipynb",
       "version": "0.3.2",
       "provenance": [],
-      "collapsed_sections": []
+      "collapsed_sections": [
+        "x2Q8Cy8HZ8dB"
+      ]
     },
     "kernelspec": {
       "name": "python3",
@@ -46,7 +48,7 @@
       },
       "cell_type": "markdown",
       "source": [
-        "## Overview\n",
+        "### Overview\n",
         "This notebook classifies time-series for segmented heartbeats from ECG lead II recordings. Either of two models (CNN or RNN) can be selected from training and evaluation.\n",
         "- Data for this analysis should be prepared using the `PreprocessECG.ipynb` notebook from this project.\n",
         "- Original data is from: https://www.kaggle.com/shayanfazeli/heartbeat"
@@ -170,13 +172,13 @@
       },
       "cell_type": "code",
       "source": [
-        "KL_ANNEALING = 50\n",
+        "KL_ANNEALING = 30\n",
         "\n",
         "MODEL_PATH = '/content/drive/My Drive/Colab Notebooks/Models/BayesianCNN/BNN.tfmodel'\n",
         "\n",
         "def kernel_prior(dtype, shape, name, trainable, add_variable_fn):\n",
         "    return tfp.layers.default_multivariate_normal_fn(dtype, shape, name, trainable, add_variable_fn)\n",
-        "#     return tfd.Independent(tfd.Horseshoe(scale=5.0))\n",
+        "#     return tfd.Horseshoe(scale=5.0)\n",
         "\n",
         "#     mix = 0.75\n",
         "#     mixture = tfd.Mixture(name=name,\n",
@@ -250,7 +252,9 @@
       "cell_type": "code",
       "source": [
         "INITIAL_LEARNING_RATE = 0.0001\n",
-        "EPOCHS = 200\n",
+        "EPOCHS = 100\n",
+        "\n",
+        "assert (EPOCHS > 0)\n",
         "\n",
         "logits = model(series)\n",
         "loss, kl, kl_reg, labels_distribution = loss_fn(labels, logits)\n",
@@ -308,6 +312,16 @@
     },
     {
       "metadata": {
+        "id": "Ml9cWK8j0vEU",
+        "colab_type": "text"
+      },
+      "cell_type": "markdown",
+      "source": [
+        "### Evaluate model"
+      ]
+    },
+    {
+      "metadata": {
         "id": "p40qKgiIIVNd",
         "colab_type": "code",
         "colab": {}
@@ -337,12 +351,24 @@
     },
     {
       "metadata": {
+        "id": "dWh_nMZN9J0N",
+        "colab_type": "text"
+      },
+      "cell_type": "markdown",
+      "source": [
+        "### Check probability estimates"
+      ]
+    },
+    {
+      "metadata": {
         "id": "K0lRvUS9gQIk",
         "colab_type": "code",
         "colab": {}
       },
       "cell_type": "code",
       "source": [
+        "from astropy.stats import binom_conf_interval\n",
+        "\n",
         "_, _, _ = plt.hist(y_prob, 10, (0, 1))\n",
         "plt.xlabel('Belief')\n",
         "plt.ylabel('Count')\n",
@@ -354,18 +380,34 @@
         "\n",
         "f_correct = n_correct / np.clip(n_all, 1, None)\n",
         "f_bins = 0.5 * (bins[:-1] + bins[1:])\n",
-        "f_correct = f_correct[n_all > 0]\n",
+        "\n",
+        "n_correct = n_correct[n_all > 0]\n",
+        "n_total = n_all[n_all > 0]\n",
+        "f_correct = n_correct / n_total\n",
         "f_bins = f_bins[n_all > 0]\n",
         "\n",
+        "lower_bound, upper_bound = binom_conf_interval(n_correct, n_total)\n",
+        "error_bars = np.array([f_correct - lower_bound, upper_bound - f_correct])\n",
+        "\n",
         "plt.plot([0., 1.], [0., 1.])\n",
-        "plt.scatter(f_bins, f_correct)\n",
-        "plt.xlabel('Belief')\n",
+        "plt.errorbar(f_bins, f_correct, yerr=error_bars, fmt='o')\n",
+        "plt.xlabel('Monte Carlo Probability')\n",
         "plt.ylabel('Frequency')\n",
         "plt.title('Correct Predictions')\n",
         "plt.show();"
       ],
       "execution_count": 0,
       "outputs": []
+    },
+    {
+      "metadata": {
+        "id": "ggvEGluM9TEw",
+        "colab_type": "text"
+      },
+      "cell_type": "markdown",
+      "source": [
+        "### Compute metrics"
+      ]
     },
     {
       "metadata": {
