--- a/ClassifyECG.ipynb
+++ b/ClassifyECG.ipynb
@@ -275,8 +275,8 @@
     "        'feature_columns': feature_columns,\n",
     "    })\n",
     "\n",
-    "# estimator.train(train_input_fn, steps=4000)\n",
-    "# info = estimator.evaluate(input_fn=eval_input_fn)"
+    "estimator.train(train_input_fn, steps=4000)\n",
+    "info = estimator.evaluate(input_fn=eval_input_fn)"
    ]
   },
   {
@@ -318,7 +318,17 @@
     "\n",
     "# Confusion matrix\n",
     "cm = skm.confusion_matrix(y_test, y_pred)\n",
-    "seaborn.heatmap(cm, annot=True,annot_kws={\"size\": 16})"
+    "seaborn.heatmap(cm, annot=True,annot_kws={\"size\": 16})\n",
+    "\n",
+    "y_prob_correct = y_prob[y_pred == y_test]\n",
+    "y_prob_mis = y_prob[y_pred != y_test]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Check probability estimates"
    ]
   },
   {
@@ -327,8 +337,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "y_prob_correct = y_prob[y_pred == y_test]\n",
-    "y_prob_mis = y_prob[y_pred != y_test]\n",
+    "from astropy.stats import binom_conf_interval\n",
     "\n",
     "_, _, _ = plt.hist(y_prob, 10, (0, 1))\n",
     "plt.xlabel('Belief')\n",
@@ -341,12 +350,18 @@
     "\n",
     "f_correct = n_correct / np.clip(n_all, 1, None)\n",
     "f_bins = 0.5 * (bins[:-1] + bins[1:])\n",
-    "f_correct = f_correct[n_all > 0]\n",
+    "\n",
+    "n_correct = n_correct[n_all > 0]\n",
+    "n_total = n_all[n_all > 0]\n",
+    "f_correct = n_correct / n_total\n",
     "f_bins = f_bins[n_all > 0]\n",
     "\n",
+    "lower_bound, upper_bound = binom_conf_interval(n_correct, n_total)\n",
+    "error_bars = np.array([f_correct - lower_bound, upper_bound - f_correct])\n",
+    "\n",
     "plt.plot([0., 1.], [0., 1.])\n",
-    "plt.scatter(f_bins, f_correct)\n",
-    "plt.xlabel('Belief')\n",
+    "plt.errorbar(f_bins, f_correct, yerr=error_bars, fmt='o')\n",
+    "plt.xlabel('Softmax Probability')\n",
     "plt.ylabel('Frequency')\n",
     "plt.title('Correct Predictions')\n",
     "plt.show();"
